--- a/labsw/accounts/templates/delete.html
+++ b/labsw/accounts/templates/delete.html
@@ -5,7 +5,7 @@
 <body>
   <h1>ユーザー削除</h1>
   <form method="post" action="complete">{% csrf_token %}
-    <p>パスワードを入力してください:</p>
+    <p>パスワードを入力してください</p>
     <input type="password" name="password" value="" />
     <br />
     <input type="submit" value="削除する" />
