微調整しました

--- a/labsw/accounts/templates/admin.html
+++ b/labsw/accounts/templates/admin.html
@@ -5,7 +5,7 @@
 <body>
   <h1>削除ユーザー選択</h1>
   <p>削除するユーザーを選んでください</p>
-  <form method="post" action="{% url 'complete' %}">{% csrf_token %}
+  <form method="post" action="{% url 'adcomp' %}">{% csrf_token %}
    <table border="1">
      <tr>
        <th></th>
