--- a/labsw/authentications/templates/authentications/logged_out.html
+++ b/labsw/authentications/templates/authentications/logged_out.html
@@ -1,10 +1,8 @@
 {% extends "base.html" %}
 
-{% block title %}ログアウト{% endblock title %}
+{% block title %}LOGOUT{% endblock title %}
 
-{% block content %}
-
-    <h3 class="page-header">ログアウトしました</h3>
-
-{% endblock content %}
+{% block body %}
+  <h3 class="page-header">ログアウトしました</h3>
+{% endblock body %}
 
