でけたーーー

--- a/labsw/accounts/templates/delete.html
+++ b/labsw/accounts/templates/delete.html
@@ -10,7 +10,7 @@
     <br />
     <input type="submit" value="削除する" />
     <br />
-    <a href="#">戻る</a>
+    <a href="/accounts/profile/">戻る</a>
   </form>
 </body>
 </html>
