--- a/labsw/authentications/templates/authentications/login.html
+++ b/labsw/authentications/templates/authentications/login.html
@@ -22,7 +22,10 @@
 
   <input type="submit" value="login" />
   <input type="hidden" name="next" value="{{ next }}" />
+
   </form>
+  <p><a href="{% url 'register' %}">ユーザ登録
+      </a></p>
 
   <br>
 {% endblock %}
