--- a/labsw/accounts/templates/admin.html
+++ b/labsw/accounts/templates/admin.html
@@ -23,6 +23,6 @@
    <input type="submit" value="削除する"> 
    </form>
    <br />
-   <a href="#">戻る</a>
+   <a href="/accounts/profile">戻る</a>
 </body>
 </html>
