--- a/labsw/authentications/templates/authentications/login.html
+++ b/labsw/authentications/templates/authentications/login.html
@@ -4,7 +4,7 @@
 
 {% block body %}
   {% if form.errors %}
-  <p>Your username and password didn't match. Please try again.</p>
+  <p>ユーザIDとパスワードが一致していません</p>
   {% endif %}
 
   <form method="post" action="{% url 'django.contrib.auth.views.login' %}">
@@ -20,12 +20,15 @@
   </tr>
   </table>
 
-  <input type="submit" value="login" />
+  <br>
+  <input type="submit" value="login" class="btn btn-primary btn-md" />
+
   <input type="hidden" name="next" value="{{ next }}" />
 
   </form>
-  <p><a href="{% url 'register' %}">ユーザ登録
-      </a></p>
 
   <br>
+  <a href="{% url 'register' %}"><button type="button" class="btn btn-success">ユーザ登録</button></a>
+
+
 {% endblock %}
