--- a/labsw/accounts/templates/delete.html
+++ b/labsw/accounts/templates/delete.html
@@ -1,16 +1,17 @@
-<!DOCTYPE html>
-<html>
-<head><meta charset="UTF-8"></head>
+{% extends "base.html" %}
 
-<body>
-  <h1>ユーザー削除</h1>
-  <form method="post" action="complete">{% csrf_token %}
-    <p>パスワードを入力してください</p>
-    <input type="password" name="password" value="" />
-    <br />
-    <input type="submit" value="削除する" />
-    <br />
-    <a href="/accounts/profile/">戻る</a>
-  </form>
-</body>
-</html>
+{% block title %}LOGIN{% endblock title %}
+
+{% block body %}
+
+<h1>ユーザー削除</h1>
+<form method="post" action="complete">{% csrf_token %}
+  <p>パスワードを入力してください</p>
+  <input type="password" name="password" value="" />
+  <br />
+  <input type="submit" value="削除する" />
+  <br />
+  <a href="/accounts/profile/">戻る</a>
+</form>
+
+{% endblock %}
