--- a/labsw/accounts/templates/createuser.html
+++ b/labsw/accounts/templates/createuser.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
-<html>
-<head><meta charset="UTF-8"></head>
+{% extends "base.html" %}
 
-<body>
-  <h1>登録完了が完了しました</h1>
-   <a href="/login">ログイン画面へ</a>
-  </form>
-</body>
-</html>
+{% block title %}LOGIN{% endblock title %}
+
+{% block body %}
+
+<h1>登録完了が完了しました</h1>
+<a href="/login">ログイン画面へ</a>
+
+{% endblock %}
